[package]
name = "first_bevy_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
bevy_egui = "0.27"
bevy_panorbit_camera = "0.18.2"
bevy_rapier3d = "0.26.0"
bevy_mod_picking = "0.19"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 3

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
